<package>
  <name>robotender_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     robotender_flexbe_behaviors contains a collection of behaviors for the robotender project.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <!-- Add here all ROS packages that contain behaviors -->
  <run_depend>behavior_example_behavior</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
