<package>
  <name>robotender_kinova_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     robotender_kinova_flexbe_states contains a collection of custom states for the robotender project.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
